--- a/.github/workflows/login_docker_hub.yml
+++ b/.github/workflows/login_docker_hub.yml
@@ -1,5 +1,5 @@
       - name: Log in to Docker Hub
         uses: docker/login-action@v3
         with:
-          username: ${{ vars.DOCKER_USERNAME }}
+          username: ${{ secrets.DOCKER_USERNAME }}
           password: ${{ secrets.DOCKER_PASSWORD }}
