--- a/.github/workflows/docker-ci.yml
+++ b/.github/workflows/docker-ci.yml
@@ -14,10 +14,16 @@ jobs:
     steps:
       - name: Checkout code
         uses: actions/checkout@v3
-      
+
+      - uses: actions/checkout@v5
+      - name: Set up Python
+       uses: actions/setup-python@v5
+       with:
+       python-version: '3.x'
+      - name: Install dependencies
+        run: python -m pip install --upgrade pip setuptools wheel
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v2
-        
       - name: Login to Docker Hub
         uses: docker/login-action@v2
         with:
